--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h1>Abdurahman Sharmarke</h1>
 <h3>Resume</h3>
 <p>Lets see how this looks on the big screen</p>
+<img src="file:///D:/G/Gifs/FQwnNJF.jpg"/>
