--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h1>Abdurahman Sharmarke</h1>
 <h3>Resume</h3>
 <p>Lets see how this looks on the big screen</p>
-<img src="https://i.ytimg.com/vi/xyxVaTmDjkw/maxresdefault.jpg"/>
+<img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
