--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <h1>Abdurahman Sharmarke</h1>
 <h3>Resume</h3>
-<p>Lets see how this looks on the big screen</p>
+<p>Lets see how this looks on the big screen. Below are the list of resumes</p>
+<ul>
+  <li> Data entry Intern at "Family Home Health Care</li>
+  <li> 2 week sales training at Better Business consultant; now known as Lake shore Drive</li>
+   <li> Twitch Afilliate for Twitch<li/>
+
+
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
