--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <li> Data entry Intern at "Family Home Health Care</li>
   <li> 2 week sales training at Better Business consultant; now known as Lake shore Drive</li>
    <li> Twitch Afilliate for Twitch <li/>
+  kkdkddd
 </ul>
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
