--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <p>Lets see how this looks on the big screen. Below are the list of resumes</p>
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
+  <li> 2 week sales training at Better Business consultant; now known as Lake shore Drive</li>
 
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
