--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
   <li> 2 week sales training at Better Business consultant; now known as Lake shore Drive</li>
+  <li> Twitch Affiliate for "Twitch"</li>
+</ul>
 
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
