--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>Lets see how this looks on the big screen. Below are the list of resumes</p>
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
-  <li> 2 week sales training at Better Business consultant; now known as Lake shore Drive</li>
+  <li> 2 week sales training at "Lake shore Drive" </li>
   <li> Twitch Affiliate for "Twitch"</li>
 </ul>
 
