--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<h1>Abdurahman Sharmarke</h1>
+  <head>Testing title</head>
+  <h1>Abdurahman Sharmarke</h1>
 
 <h3>Resume</h3>
 <p>Lets see how this looks on the big screen. Below are the list of resumes</p>
