--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>Testing title</head>
+  <title>Testing title</title>
   <h1>Abdurahman Sharmarke</h1>
 
 <h3>Resume</h3>
