--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <h1>Abdurahman Sharmarke</h1>
-<h3>Resume</h3>
+<meta charset="utf-12"/>
+  <h3>Resume</h3>
 <p>Lets see how this looks on the big screen. Below are the list of resumes</p>
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
