--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <li> 2 week sales training at "Lake shore Drive" </li>
   <li> Twitch Affiliate for "Twitch"</li>
 </ul>
+  <h3>Testing sub-heading</h3>
 
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
