--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h1>Abdurahman Sharmarke</h1>
 <meta charset="utf-8"/>
   <h3>Resume</h3>
-<p>Lets see how this looks on the big screen. Below are the list of resumes</p>
+<p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
   <li> 2 week sales training at "Lake shore Drive" </li>
@@ -11,4 +11,6 @@
 </ul>
   <h3>Testing sub-heading</h3>
 
+<link rel="stylesheet" type="text/css" href="main.css"/>  
+  
 <img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
