--- a/index.html
+++ b/index.html
@@ -13,4 +13,8 @@
 
 <link rel="stylesheet" type="text/css" href="main.css"/>  
   
-<img src="https://wallpaperscraft.com/image/playstation_gamepad_crash_22102_1920x1080.jpg"/>
+background-image: url(https://s3.amazonaws.com/uploads.webconnex.com/13743/shutterstock_107569946.jpg?1506118145107) 
+  height: 100vh 
+  background-size: cover
+  margin-bottom: 50px
+  
