--- a/index.html
+++ b/index.html
@@ -13,8 +13,4 @@
 
 <link rel="stylesheet" type="text/css" href="main.css"/>  
   
-background-image: url(https://s3.amazonaws.com/uploads.webconnex.com/13743/shutterstock_107569946.jpg?1506118145107) 
-  height: 100vh 
-  background-size: cover
-  margin-bottom: 50px
-  
+<body background="https://s3.amazonaws.com/uploads.webconnex.com/13743/shutterstock_107569946.jpg?1506118145107.jpg" >
