--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 
 <link rel="stylesheet" type="text/css" href="main.css"/>  
   
- .hero { background-image: url("https://s3.amazonaws.com/uploads.webconnex.com/13743/shutterstock_107569946.jpg?1506118145107.jpg");} 
+ .hero { background-image: url("https://wallpapercave.com/wp/EacaKU1.jpg");} 
