--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 
 <link rel="stylesheet" type="text/css" href="main.css"/>  
   
-
+background-image: url(https://wallpapercave.com/wp/EacaKU1.jpg);
