--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <body>
   <h1>Abdurahman Sharmarke</h1>
 <meta charset="utf-8"/>
   <h3>Resume</h3>
@@ -14,3 +15,15 @@
 <link rel="stylesheet" type="text/css" href="main.css"/>  
   
 background-image: url(https://wallpapercave.com/wp/EacaKU1.jpg);
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </body>
+</html>
