--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
   <body>
-  <h1>Abdurahman Sharmarke</h1>
+ <link href= "styles/basic.css" rel="stylesheet" type="text/css" meadia = "screen" />  
+    </head>   
+    <h1>Abdurahman Sharmarke</h1>
 <meta charset="utf-8"/>
-  <h3>Resume</h3>
+  <h2>Resume</h2>
 <p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
 <ul>
   <li> Data entry Intern at "Family Home Health Care</li>
@@ -12,7 +15,7 @@
 </ul>
   <h3>Testing sub-heading</h3>
 
-<link rel="stylesheet" type="text/css" href="main.css"/>  
+
   
 background-image: url(https://wallpapercave.com/wp/EacaKU1.jpg);
   
