--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <body>
- <link href= "styles/basic.css" rel="stylesheet" type="text/css" meadia = "screen" />  
+ <link href= "styles.css" rel="stylesheet" type="text/css">  
     </head>   
     <h1>Abdurahman Sharmarke</h1>
 <meta charset="utf-8"/>
