--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   </head>
     <body>
- <link href= "styles.css" rel="stylesheet" type="text/css">  
+ <link href= "styles.css" rel="stylesheet" >
     
     <h1>Abdurahman Sharmarke</h1>
   <h2>Resume</h2>
