--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
  <link href= "styles.css" rel="stylesheet" >
-    
+    <img src = "https://4.bp.blogspot.com/-KBLDnQ90g4g/UmvW7pjV5xI/AAAAAAAASlE/iMEPAmWJ5FM/s0/Rolling_Waves_Mod-ultra-HD.jpg">
     <h1>Abdurahman Sharmarke</h1>
   <h2>Resume</h2>
 <p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
@@ -15,7 +15,7 @@
   <li> 2 week sales training at "Lake shore Drive" </li>
   <li> Twitch Affiliate for "Twitch"</li>
 </ul>
-  <h3>Testing sub-heading</h3>
+  <h3>Testing sub-heading 1</h3>
 
 
   
