--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
     <body>
  <link href= "styles.css" rel="stylesheet" >
-    <img src = "https://4.bp.blogspot.com/-KBLDnQ90g4g/UmvW7pjV5xI/AAAAAAAASlE/iMEPAmWJ5FM/s0/Rolling_Waves_Mod-ultra-HD.jpg">
-    <h1>Abdurahman Sharmarke</h1>
+    background-image: url(https://logos59wordpresscom.files.wordpress.com/2016/04/blue-texture-15893.jpg);
+      <h1>Abdurahman Sharmarke</h1>
   <h2>Resume</h2>
 <p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
 <ul>
