--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
   </head>
     <body>
- <link href= "styles.css" rel="stylesheet" >
-    background-image: url(https://logos59wordpresscom.files.wordpress.com/2016/04/blue-texture-15893.jpg);
+ <link rel= "stylesheet" type="text/css" href="css/style.css">
       <h1>Abdurahman Sharmarke</h1>
   <h2>Resume</h2>
 <p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
