--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   </head>
     <body>
- <link rel= "stylesheet" type="text/css" href="css/style.css">
+ <link rel= "stylesheet" type="text/css" href="style.css">
       <h1>Abdurahman Sharmarke</h1>
   <h2>Resume</h2>
 <p>Lets see how this looks on the big screen. Below are the list of jobs I've done</p>
