--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   </head>
     <body>
- <link rel= "stylesheet" type="text/css" href="main.css">
+ <link rel= "stylesheet" type="text/css" href="style.css">
  
       
       <h1 class="page-title"><b>Abdurahman Sharmarke</b></h1>
