--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h1 class="page-title"><b>Abdurahman Sharmarke</b></h1>
     
       <div class="sub-titles">
-      <h5>1542 rice creek road N.E</h5>
-      <h5>Fridley MN, 55432</h5>
+      <h5>620 e Franklin ave apt 306 </h5>
+      <h5>Minneapolis MN, 55404</h5>
       <h5>763-321-0656</h5>
       </div>
       
